fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -367,7 +367,7 @@ html{
 }
 #p1{
   margin-left: 1%;
-  margin-right: 4%;
+  margin-right: 10%;
 }
 
 @keyframes App-logo-spin {
